Use picture element instead of background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
 <main class="product">
-    <div class="product-image"></div>
+    <picture>
+        <source media="(min-width: 40em)"
+                srcset="./images/image-product-desktop.jpg 1x, ./images/image-product-desktop.jpg 2x">
+        <img src="./images/image-product-mobile.jpg" alt="Product image" class="product-image">
+    </picture>
     <div class="product-content">
         <p class="product-category | fs-small">Perfume</p>
         <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
