--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <main class="product">
     <picture>
         <source media="(min-width: 40em)"
-                srcset="./images/image-product-desktop.jpg 1x, ./images/image-product-desktop.jpg 2x">
+                srcset="./images/image-product-desktop.jpg 1x, ./images/image-product-desktop.jpg 2x"
+        >
         <img src="./images/image-product-mobile.jpg" alt="Product image" class="product-image">
     </picture>
     <div class="product-content">
